# confprint

./: .bumpversion.cfg  .flake8  .gitignore  CITATION.cff  LICENSE  README.ipynb  README.md  confprint.code-workspace  pyproject.toml  pytest.ini
.github/workflows/: cicd.yml  unit_test_full.yml  unit_test_quick.yml
assets/images/: placeholder
confprint/: __init__.py  _exceptions.py  err_print.py  format.py  prefix_printer.py
tests/: test_printers.py
